[package]
name = "etherglass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
web3 = "0.18.0"
tokio = "1.18.2"
serde_json = "1.0"
siwe = "0.3"
lazy_static = "1.4.0"
clap = {version = "3.1.18", features = ["derive"]}
redis = "0.21.5"
async-std = {version = "1.11.0",features = ["attributes", "tokio1"]}

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]